[package]
name = "untyped_vec"
version = "0.1.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
description = "A type-erased vector type for Rust"
repository = "https://github.com/Fahoom/untyped_vec"
keywords = ["vec", "untyped", "type-erased", "erased"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
